# fastapi-core

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
src/: main.py
src/config/: settings.py
src/routes/: __init__.py  health.py  user.py
src/schemas/: __init__.py  user_schema.py
