[tool.poetry]
name = "fastapi-core"
version = "0.1.0"
description = ""
authors = ["Willians Pereira <willians@4vconnect.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.2"}
pydantic-settings = "^2.6.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
httpx = "^0.27.2"
pendulum = "^3.0.0"
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.7"
pre-commit = "^4.0.1"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
autoflake = "^2.3.1"
pylint = "^3.3.1"

[tool.isort]
profile = "black"
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
